small changes in the interface

--- a/templates/planner.html
+++ b/templates/planner.html
@@ -143,7 +143,7 @@
     </style>
 </head>
 <body>
-    <header><img src="/images/google_trips.png" alt="Google" height="32"><span class="product">Trips</span></header>
+    <header><img src="/images/google_trips.png" alt="Google" height="32"><span class="product">Google Trips</span></header>
     <main>
         <section id="question-pane">
             <h2>Tell us about your trip</h2>
